# linux-show-player

./: .codacy.yml  .crowdin.yml  .gitignore  .gitmodules  .landscape.yml  .readthedocs.yml  .travis.yml  .travis_install.sh  .travis_run.sh  CNAME  Gemfile  Pipfile  README.md  _config.yml  about.md  crowdin.yml  download.html  generate_pro_files.py  generate_qt_pro.py  i18n_update.py  i18n_update.sh  index.html  linux-show-player  linux-show-player.desktop  plugins_utils.py  pyproject.toml  requirements.txt  search_source_files.py  setup.py  translate.sh  update_04_session.py
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.tx/: config
.well-known/: org.flathub.VerifiedApps.txt
_data/: navigation.yml
_includes/: footer.html  navigation.html
_layouts/: default.html
_sass/: _variables.scss  waveform.scss
assets/css/: icons.scss  style.scss
assets/images/: flatpack-logo.svgz
assets/js/: theme-switcher.js  waveform.js  wavform.js
docs/user/: Makefile  cart_layout.md  command_cue_examples.md  conf.py  cues.md  getting_started.md  gst_custom_elements.md  gst_media_settings.md  index.md  installation.md  list_layout.md  make.bat  menus.md  requirements.txt
docs/user/cues/: action_cues.md  index.md  integration_cues.md  media_cues.md  media_custom_elements.md  misc_cues.md
docs/user/plugins/: artnet_timecode.md  cue_controls.md  cue_rename.md  index.md  layout_controls.md  presets.md  replaygain.md  synchronization.md  timecode.md  triggers.md
docs/user/source/: about.rst  cart_layout.rst  command_cue_examples.md  conf.py  cues.rst  getting_started.rst  gst_custom_elements.md  gst_custom_elements.rst  gst_media_settings.md  gst_media_settings.rst  index.rst  list_layout.rst  menus.md  menus.rst
lisp/: __init__.py  application.py  default.cfg  default.json  main.py  repository.py  session.py
lisp/actions/: action.py  actions_handler.py
lisp/backend/: __init__.py  audio_utils.py  backend.py  media.py  media_element.py  waveform.py
lisp/backends/: __init__.py
lisp/backends/base/: audio_utils.py  backend.py  media.py  media_cue_factory.py  media_element.py  media_time.py
lisp/backends/gst/: backend.py  gi_repository.py  gst_cue_factories.py  gst_element.py  gst_media.py  (+6 more)
lisp/command/: command.py  cue.py  layout.py  model.py  stack.py
lisp/core/: action.py  actions_handler.py  class_based_registry.py  clock.py  configuration.py  decorators.py  dicttree.py  fade_functions.py  fader.py  fader_group.py  has_properties.py  loading.py  media.py  media_element.py  media_time.py  memento_model.py  memento_model_actions.py  model.py  model_adapter.py  module.py  plugin.py  plugin_loader.py  plugins_manager.py  properties.py  proxy_model.py  qmeta.py  rwait.py  session.py  session_uri.py  signal.py  singleton.py  util.py
lisp/cues/: action_cue.py  cue.py  cue_actions.py  cue_factory.py  cue_memento_model.py  cue_model.py  cue_time.py  media_cue.py
lisp/gst/: gst_element.py  gst_media.py  gst_media_cue.py  gst_media_settings.py  gst_pipe_edit.py  gst_preferences.py
lisp/i18n/: lisp_ca.qm  lisp_ca.ts  lisp_cs.qm  lisp_cs.ts  lisp_en.ts  lisp_es.qm  lisp_es.ts  lisp_fr.qm  lisp_fr.ts  lisp_it.qm  lisp_it.ts  lisp_it_IT.qm  lisp_it_IT.ts  lisp_sl_SI.qm  lisp_sl_SI.ts
lisp/layout/: __init__.py  cue_layout.py  cue_menu.py
lisp/layouts/: __init__.py  cue_layout.py  cue_layout_actions.py  cue_menu_registry.py
lisp/migrations/: from_0.py  from_0_5_0.py
lisp/modules/: __init__.py  load_backend.py  media_cue_menus.py
lisp/plugins/: __init__.py  default.cfg  default.json  media_cue_menus.py
lisp/ui/: about.py  cuelistdialog.py  elogging.py  layoutselect.py  mainwindow.py  qclicklabel.py  qclickslider.py  qcolorbutton.py  qdbmeter.py  qdelegates.py  qmessagebox.py  qmodels.py  qmutebutton.py  qstyledslider.py  qtextinputdialog.py  qtimeinputdialog.py  qvertiacallabel.py  styles.py  timedit.py  ui_utils.py
lisp/utils/: audio_utils.py  configuration.py  decorators.py  dyamic_loader.py  elogging.py  fade_functor.py  logging.py  util.py
scripts/: pyts_update.py
scripts/Flatpak/: README  build_flatpak.sh  config.sh  functions.sh  pipenv_flatpak.py  prepare_flatpak.py  requirements.txt  template.json
scripts/flatpak/: .gitignore  README  README.md  build-flatpak.sh  config.sh  functions.sh  gstreamer-modules.json  numpy-modules.json  org.linux_show_player.LinuxShowPlayer.json  org.linuxshowplayer.LinuxShowPlayer.json  patch-manifest.py  poetry-flatpak.py  pygobject-modules.json  pyqt-build.sh  pyqt-modules.json  python-modules.json  python-rtmidi-modules.json  requirements.txt
timecode/: __init__.py
(+1029 files in other folders)
